Setting up front end for planets

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,7 +1,7 @@
-@import "./components/test/Test.scss";
+@import "./components/planets/Planets.scss";
 @import "./components/header/Header.scss";
 @import "./components/login/Login.scss";
-
+@import "./components/register/Register.scss";
 
 .custom-label {
     font-size: 1rem;
