--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,6 +2,7 @@
 @import "./components/header/Header.scss";
 @import "./components/login/Login.scss";
 @import "./components/register/Register.scss";
+@import "./components/modal/Modal.scss";
 
 .custom-label {
     font-size: 1rem;
